[tool.poetry]
name = "gnucash-imports"
version = "0.1.0"
description = ""
authors = ["dpslwk <dps.lwk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
stripe = "^10.0.0"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
python-dateutil = "^2.9.0.post0"
piecash = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
